--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -77,7 +77,7 @@
         </activity>
 
         <activity
-            android:name=".thermal.ThermalActivity"
+            android:name=".thermal.ThermalSettingsActivity"
             android:label="@string/thermal_title"
             android:theme="@style/Theme.SubSettingsBase"
             android:exported="true">
@@ -94,6 +94,11 @@
                 android:name="com.android.settings.order"
                 android:value="1" />
         </activity>
+
+        <activity
+            android:name=".thermal.TouchSettingsActivity"
+            android:theme="@style/Theme.SubSettingsBase"
+            android:exported="true" />
 
         <service
             android:name=".thermal.ThermalService"
