--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -37,7 +37,7 @@
 
         <receiver android:name=".BootCompletedReceiver"
             android:exported="true">
-            <intent-filter>
+            <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
